--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@ examples/JobOrder.2.xml
 build/
 dist/
 procsim.egg-info/
+
+# Virtual environments
+venv/
+env/
+
+# IDE configurations
+.vscode/
