CHG: Set TF wherever ISP is set.

--- a/examples/procsim_config.json
+++ b/examples/procsim_config.json
@@ -44,6 +44,9 @@
       "num_isp": 387200,
       "num_isp_erroneous": 0,
       "num_isp_corrupt": 0,
+      "num_tf": 387200,
+      "num_tf_erroneous": 0,
+      "num_tf_corrupt": 0,
 
       // Outputs to generate
       "output_path": "workspace",  // default is CWD, or read from job order if any
@@ -329,6 +332,9 @@
       "num_isp": 387200,
       "num_isp_erroneous": 0,
       "num_isp_corrupt": 0,
+      "num_tf": 387200,
+      "num_tf_erroneous": 0,
+      "num_tf_corrupt": 0,
 
       // Outputs to generate
       "outputs": [
@@ -582,6 +588,9 @@
       "num_isp": 387200,
       "num_isp_erroneous": 0,
       "num_isp_corrupt": 0,
+      "num_tf": 387200,
+      "num_tf_erroneous": 0,
+      "num_tf_corrupt": 0,
 
       // Outputs to generate
       "outputs": [
