--- a/examples/procsim_config.json
+++ b/examples/procsim_config.json
@@ -130,6 +130,7 @@
       ],
       "zip_output": true,   // Default true, set false for diagnostics only
       "keep_zip": true,  // Set true for diagnostics only
+      "data_take_id": 1,  // Mandatory for RAWS products.
       "outputs": [
         {
           "type": "RAWS022_10",
@@ -412,6 +413,7 @@
         "2021-02-01T00:25:33.745Z", // 1 second too late
         "2021-02-01T02:03:43.725Z"  // 1 second too early
       ],
+      "data_take_id": 1,  // Mandatory for RAWS products.
       "outputs": [
         {
           "type": "RAWS022_10",
@@ -658,6 +660,7 @@
         "2021-02-01T00:25:33.745Z", // 1 second too late
         "2021-02-01T02:03:43.725Z"  // 1 second too early
       ],
+      "data_take_id": 1,  // Mandatory for RAWS products.
       "outputs": [
         {
           "type": "RAWS022_10",
