--- a/examples_flex/procsim_config_l0_step1.json
+++ b/examples_flex/procsim_config_l0_step1.json
@@ -75,6 +75,12 @@
           "size": 0
         },
         {
+          "type": "RWS_XS_OBC",
+          "metadata_source": ".*RAW_XS_OBC.*", // Input to use
+          "enable_slicing": false,
+          "size": 0
+        },
+        {
           "type": "RWS_XS_ITM",
           "metadata_source": ".*RAW_XS_LR_.*", // Input to use
           "enable_slicing": false,
