other L0 CAL products

--- a/examples_flex/procsim_config_l0_step3.json
+++ b/examples_flex/procsim_config_l0_step3.json
@@ -116,6 +116,96 @@
           "type": "L0__DARKNP",
           "metadata_source": ".*RWS_H1_CAL.*", // Input to use
           "size": 0
+        },
+        {
+          "type": "L0__DARKSR",
+          "metadata_source": ".*RWS_H1_CAL.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "L0__DEFDAR",
+          "metadata_source": ".*RWS_H1_CAL.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "L0__DARKOC",
+          "metadata_source": ".*RWS_H1_CAL.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "L0__DRKMTF",
+          "metadata_source": ".*RWS_H1_CAL.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "L0__DRKSTR",
+          "metadata_source": ".*RWS_H1_CAL.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "L0__SUN___",
+          "metadata_source": ".*RWS_H1_CAL.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "L0__DEFSUN",
+          "metadata_source": ".*RWS_H1_CAL.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "L0__MOON__",
+          "metadata_source": ".*RWS_H1_CAL.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "L0__MOONSL",
+          "metadata_source": ".*RWS_H1_CAL.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "L0__LINDES",
+          "metadata_source": ".*RWS_H1_CAL.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "L0__LINSEA",
+          "metadata_source": ".*RWS_H1_CAL.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "L0__LINSUN",
+          "metadata_source": ".*RWS_H1_CAL.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "L0__LINDAR",
+          "metadata_source": ".*RWS_H1_CAL.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "L0__CTE___",
+          "metadata_source": ".*RWS_H1_CAL.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "L0__SCNVAL",
+          "metadata_source": ".*RWS_H1_CAL.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "L0__COREG_",
+          "metadata_source": ".*RWS_H1_CAL.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "L0__SPECEO",
+          "metadata_source": ".*RWS_H1_CAL.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "L0__CLOUD_",
+          "metadata_source": ".*RWS_H1_CAL.*", // Input to use
+          "size": 0
         }
       ],
       "exit_code": 0
