--- a/examples_flex/procsim_config_l0_step1.json
+++ b/examples_flex/procsim_config_l0_step1.json
@@ -168,6 +168,42 @@
           "size": 0
         },
         {
+          "type": "RWS_LRIOBS",
+          "metadata_source": ".*RAW_XS_LR_.*", // Input to use
+          "enable_slicing": false,
+          "size": 0
+        },
+        {
+          "type": "RWS_H1IOBS",
+          "metadata_source": ".*RAW_XS_HR1.*", // Input to use
+          "enable_slicing": false,
+          "size": 0
+        },
+        {
+          "type": "RWS_H2IOBS",
+          "metadata_source": ".*RAW_XS_HR2.*", // Input to use
+          "enable_slicing": false,
+          "size": 0
+        },
+        {
+          "type": "RWS_LRICAL",
+          "metadata_source": ".*RAW_XS_LR_.*", // Input to use
+          "enable_slicing": false,
+          "size": 0
+        },
+        {
+          "type": "RWS_H1ICAL",
+          "metadata_source": ".*RAW_XS_HR1.*", // Input to use
+          "enable_slicing": false,
+          "size": 0
+        },
+        {
+          "type": "RWS_H2ICAL",
+          "metadata_source": ".*RAW_XS_HR2.*", // Input to use
+          "enable_slicing": false,
+          "size": 0
+        },
+        {
           "type": "RWS_LRPVAU",
           "metadata_source": ".*RAW_XS_LR_.*", // Input to use
           "enable_slicing": false,
