add TST/WRN even though not in excel sheet

--- a/examples_flex/procsim_config_l0_step3.json
+++ b/examples_flex/procsim_config_l0_step3.json
@@ -66,6 +66,16 @@
           "size": 0
         },
         {
+          "type": "L0__TST___",
+          "metadata_source": ".*RWS_H1_VAU.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "L0__WRN___",
+          "metadata_source": ".*RWS_H1_VAU.*", // Input to use
+          "size": 0
+        },
+        {
           "type": "L0__DARKNP",
           "metadata_source": ".*RWS_H1_CAL.*", // Input to use
           "size": 0
