also add L0__OBSMON to examples
we now really generate all available output products.

--- a/examples_flex/procsim_config_l0_step3.json
+++ b/examples_flex/procsim_config_l0_step3.json
@@ -36,6 +36,11 @@
           "size": 0
         },
         {
+          "type": "L0__OBSMON",
+          "metadata_source": ".*RWS_H1_OBS.*", // Input to use
+          "size": 0
+        },
+        {
           "type": "L0__INSTTM",
           "metadata_source": ".*RWS_XS_ITM.*", // Input to use
           "size": 0
