get data_take_id from inputs
also make sure baseline and anx_elapsed get passed correctly.

--- a/examples_flex/procsim_config_l0_step3.json
+++ b/examples_flex/procsim_config_l0_step3.json
@@ -25,8 +25,9 @@
       // Logging
       "nr_progress_log_messages": 4,
 
+      "baseline": "1B",
+
       "apid": 1234,
-      "data_take_id": 1,  // Mandatory for RAWS products.
       "calibration_id": 7,
 
       "outputs": [
