--- a/examples_flex/procsim_config_l0_step2.json
+++ b/examples_flex/procsim_config_l0_step2.json
@@ -32,6 +32,11 @@
           "type": "RWS_H1_CAL",
           "metadata_source": ".*RWS_H1PCAL.*", // Input to use
           "size": 0
+        },
+        {
+          "type": "RWS_H1_VAU",
+          "metadata_source": ".*RWS_H1PVAU.*", // Input to use
+          "size": 0
         }
       ],
       "exit_code": 0
