--- a/examples_flex/procsim_config_raw.json
+++ b/examples_flex/procsim_config_raw.json
@@ -18,7 +18,7 @@
 //            "creation_date": "2021-02-01T05:00:00.000Z",  // Default is 'now' (current date)
             "acquisition_date": "2021-02-01T01:38:10.000Z",
             "acquisition_station": "SP",
-            "zip_output": true,
+            "zip_output": false,
             "keep_zip": true,
 
             "outputs": [
