remove anc period, to get from raw inputs.

--- a/examples_flex/procsim_config_l0_step1.json
+++ b/examples_flex/procsim_config_l0_step1.json
@@ -54,9 +54,7 @@
 
       "anc_events": [
           {
-              "apid": "4321",
-              "start": "2023-04-11T07:30:00.000000Z",
-              "stop": "2023-04-11T10:40:00.000000Z"
+              "apid": "4321"
           }
       ],
 
