--- a/examples_flex/procsim_config_l0_step1.json
+++ b/examples_flex/procsim_config_l0_step1.json
@@ -67,6 +67,11 @@
           "type": "RWS_H1_OBS",
           "metadata_source": ".*RAW_XS_HR1.*", // Input to use
           "size": 0
+        },
+        {
+          "type": "RWS_H1POBS",
+          "metadata_source": ".*RAW_XS_HR1.*", // Input to use
+          "size": 0
         }
       ],
       "exit_code": 0
