--- a/examples_flex/procsim_config_l0_step1.json
+++ b/examples_flex/procsim_config_l0_step1.json
@@ -82,6 +82,26 @@
           "type": "RWS_H1PVAU",
           "metadata_source": ".*RAW_XS_HR1.*", // Input to use
           "size": 0
+        },
+        {
+          "type": "RWS_H2_OBS",
+          "metadata_source": ".*RAW_XS_HR2.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "RWS_H2POBS",
+          "metadata_source": ".*RAW_XS_HR2.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "RWS_H2_VAU",
+          "metadata_source": ".*RAW_XS_HR2.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "RWS_H2PVAU",
+          "metadata_source": ".*RAW_XS_HR2.*", // Input to use
+          "size": 0
         }
       ],
       "exit_code": 0
