plus LR. now all outputs for DD1 are as expected

--- a/examples_flex/procsim_config_l0_step1.json
+++ b/examples_flex/procsim_config_l0_step1.json
@@ -102,6 +102,26 @@
           "type": "RWS_H2PVAU",
           "metadata_source": ".*RAW_XS_HR2.*", // Input to use
           "size": 0
+        },
+        {
+          "type": "RWS_LR_OBS",
+          "metadata_source": ".*RAW_XS_LR_.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "RWS_LRPOBS",
+          "metadata_source": ".*RAW_XS_LR_.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "RWS_LR_VAU",
+          "metadata_source": ".*RAW_XS_LR_.*", // Input to use
+          "size": 0
+        },
+        {
+          "type": "RWS_LRPVAU",
+          "metadata_source": ".*RAW_XS_LR_.*", // Input to use
+          "size": 0
         }
       ],
       "exit_code": 0
