--- a/examples_flex/procsim_config_l0_step2.json
+++ b/examples_flex/procsim_config_l0_step2.json
@@ -16,6 +16,8 @@
       "task_name": "Step2",
       "task_version": "05.03L01",
 
+      "creation_date": "2023-04-11T10:03:15.000Z",
+
       // Resources
       "processing_time": 1,
       "nr_cpu": 3,
@@ -76,13 +78,13 @@
           "metadata_source": ".*RWS_LRPCAL.*", // Input to use
           "size": 0
         },
-        //ITM
+      //ITM
         {
           "type": "RWS_XS_ITM",
           "metadata_source": ".*RWS_XSPITM.*", // Input to use
           "size": 0
         },
-        //OBC
+      //OBC
         {
           "type": "RWS_XS_OBC",
           "metadata_source": ".*RWS_XSPOBC.*", // Input to use
