--- a/examples_flex/procsim_config_l0_step3.json
+++ b/examples_flex/procsim_config_l0_step3.json
@@ -16,6 +16,8 @@
       "task_name": "Step3",
       "task_version": "05.03L01",
 
+      "creation_date": "2023-04-11T10:03:15.000Z",
+
       // Resources
       "processing_time": 1,
       "nr_cpu": 3,
@@ -61,6 +63,16 @@
 		{
           "type": "L0__ICUDTM",
           "metadata_source": ".*RWS_XS_OBC.*", // Input to use
+          "size": 0
+        },
+		{
+          "type": "L0__DARKNP",
+          "metadata_source": ".*RWS_H1_CAL.*", // Input to use
+          "size": 0
+        },
+		{
+          "type": "L0__DARKSR",
+          "metadata_source": ".*RWS_H1_CAL.*", // Input to use
           "size": 0
         }
       ],
