now can separately generate RAC_DARKNP and RAC_DARKSR

--- a/examples_flex/procsim_config_l1.json
+++ b/examples_flex/procsim_config_l1.json
@@ -34,6 +34,11 @@
           "type": "RAC_DARKNP",
           "metadata_source": ".*L0__DARKNP.*", // Input to use
           "size": 0
+        },
+        {
+          "type": "RAC_DARKSR",
+          "metadata_source": ".*L0__DARKSR.*", // Input to use
+          "size": 0
         }
       ],
       "exit_code": 0
